<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <AutoCompleteTextView
        android:layout_width="match_parent"
        android:layout_height="40sp"
        android:background="#4381b3"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:gravity="center"
        android:focusable="false"
        android:id="@+id/TextTitleView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <ImageButton
        android:layout_width="40sp"
        android:layout_height="40sp"
        android:gravity="left"
        android:id="@+id/BasketButton"
        android:src="@drawable/basket"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:visibility="invisible" />

    <ImageButton
        android:layout_width="40sp"
        android:layout_height="40sp"
        android:gravity="right"
        android:id="@+id/CopyButton"
        android:src="@drawable/mail"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:visibility="invisible" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/TextTitleView"
        android:layout_above="@+id/linearLayout"
        android:fillViewport="false">

        <LinearLayout
            android:id="@+id/workLayer"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </ScrollView>


    <LinearLayout
        android:baselineAligned="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="#d5d5d5"
        android:orientation="horizontal"
        android:id="@+id/linearLayout">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_weight="0.2"
            android:gravity="center"
            android:orientation="vertical">
            <ImageButton
                android:id="@+id/imageButtonError"
                android:contentDescription="@string/menu_error"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:src="@drawable/bug" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/menu_error"
                android:textSize="12sp"
                android:id="@+id/txtError" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_weight="0.2"
            android:gravity="center"
            android:orientation="vertical">
            <ImageButton
                android:id="@+id/imageButtonNetWork"
                android:contentDescription="@string/menu_network"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:src="@drawable/network" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/menu_network"
                android:id="@+id/txtNetWork"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_weight="0.2"
            android:gravity="center"
            android:orientation="vertical">
            <ImageButton
                android:id="@+id/imageButtonTransactions"
                android:contentDescription="@string/menu_transactions"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:src="@drawable/shopping_cart" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/menu_transactions"
                android:id="@+id/txtTransaction"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_weight="0.2"
            android:gravity="center"
            android:orientation="vertical">
            <ImageButton
                android:id="@+id/imageButtonOther"
                android:contentDescription="@string/menu_other"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:src="@drawable/controller" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/menu_other"
                android:id="@+id/txtOther"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_weight="0.2"
            android:gravity="center"
            android:orientation="vertical">
            <ImageButton
                android:id="@+id/imageButtonConsole"
                android:contentDescription="@string/menu_console"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:src="@drawable/glasses" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/menu_console"
                android:id="@+id/txtConsole"
                android:textSize="12sp" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>